force-app/main/default/objects/RMS_Product__c/RMS_Product__c.object-meta.xml
<CustomObject>
    <description>Base data - Product</description>
    <label>RMS Product</label>
    <nameField>
        <label>Product Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMS Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>