force-app/main/default/objects/RMS_Product__c/fields/Actual_Sizes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sizes__c</fullName>
    <description>actual_sizes_ft_all_gl</description>
    <label>Actual Sizes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>