force-app/main/default/objects/RMS_Product__c/fields/Actual_Sizes_CN__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sizes_CN__c</fullName>
    <description>actual_sizes_ft_cn_rl</description>
    <label>Actual Sizes CN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>