force-app/main/default/objects/RMS_Product__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <description>age_group_all_all_gl</description>
    <label>Age Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adults</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>