force-app/main/default/objects/RMS_Product__c/fields/Asia_Category__c.field-meta.xml
<CustomField>
    <fullName>Asia_Category__c</fullName>
    <description>category_all_cn_rl</description>
    <label>Asia Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAGS</fullName>
            </value>
            <value>
                <fullName>CAPS</fullName>
            </value>
            <value>
                <fullName>FLEECE</fullName>
            </value>
            <value>
                <fullName>OUTERWEAR</fullName>
            </value>
            <value>
                <fullName>SOCKS</fullName>
            </value>
            <value>
                <fullName>TEE</fullName>
            </value>
            <value>
                <fullName>TRACK</fullName>
            </value>
            <value>
                <fullName>WOVEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>