force-app/main/default/objects/RMS_Product__c/fields/Asia_Product_Bucket_I__c.field-meta.xml
<CustomField>
    <fullName>Asia_Product_Bucket_I__c</fullName>
    <label>Asia Product Bucket I</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Cut &amp; Sew</fullName>
            </value>
            <value>
                <fullName>Essential</fullName>
            </value>
            <value>
                <fullName>FOS</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Seasonal Core</fullName>
            </value>
            <value>
                <fullName>Seasonal Graphic</fullName>
            </value>
            <value>
                <fullName>Seasonal Material</fullName>
            </value>
            <value>
                <fullName>Seasonal Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>