force-app/main/default/objects/RMS_Product__c/fields/Asia_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Asia_Sub_Category__c</fullName>
    <description>sub_category_all_cn_rl</description>
    <label>Asia Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Backpack</fullName>
            </value>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>CROSSBODY</fullName>
            </value>
            <value>
                <fullName>DUFFEL</fullName>
            </value>
            <value>
                <fullName>FLEECE BOTTOM</fullName>
            </value>
            <value>
                <fullName>FLEECE TOP</fullName>
            </value>
            <value>
                <fullName>FOOTIES</fullName>
            </value>
            <value>
                <fullName>HIDDENS</fullName>
            </value>
            <value>
                <fullName>LS TEE</fullName>
            </value>
            <value>
                <fullName>Messenger</fullName>
            </value>
            <value>
                <fullName>NON PADDED</fullName>
            </value>
            <value>
                <fullName>POUCH</fullName>
            </value>
            <value>
                <fullName>SLEEVELESS</fullName>
            </value>
            <value>
                <fullName>Snapback</fullName>
            </value>
            <value>
                <fullName>SS TEE</fullName>
            </value>
            <value>
                <fullName>TEE DRESS</fullName>
            </value>
            <value>
                <fullName>Totes</fullName>
            </value>
            <value>
                <fullName>TRACK BOTTOM</fullName>
            </value>
            <value>
                <fullName>TRACK TOP</fullName>
            </value>
            <value>
                <fullName>Waist Bag</fullName>
            </value>
            <value>
                <fullName>WOVEN BOTTOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>