force-app/main/default/objects/RMS_Product__c/fields/Basic_Material__c.field-meta.xml
<CustomField>
    <fullName>Basic_Material__c</fullName>
    <description>basic_material_all_all_gl</description>
    <label>Basic Material</label>
    <length>100</length>
    <type>Text</type>
</CustomField>