force-app/main/default/objects/RMS_Product__c/fields/Basic_Material_group__c.field-meta.xml
<CustomField>
    <fullName>Basic_Material_Group__c</fullName>
    <description>basic_material_group_all_all_gl</description>
    <label>Basic Material Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Cotton Ripstop</fullName>
            </value>
            <value>
                <fullName>Cotton Twill</fullName>
            </value>
            <value>
                <fullName>French Terry</fullName>
            </value>
            <value>
                <fullName>Jersey</fullName>
            </value>
            <value>
                <fullName>Mesh</fullName>
            </value>
            <value>
                <fullName>Nylon Ripstop</fullName>
            </value>
            <value>
                <fullName>Pique</fullName>
            </value>
            <value>
                <fullName>Polyester Ripstop</fullName>
            </value>
            <value>
                <fullName>Polyester Taffeta</fullName>
            </value>
            <value>
                <fullName>Polyester Tricot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>