force-app/main/default/objects/RMS_Product__c/fields/Basic_Material_Id__c.field-meta.xml
<CustomField>
    <fullName>Basic_Material_Id__c</fullName>
    <description>basic_material_id_all_all_gl</description>
    <label>Basic Material Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>