force-app/main/default/objects/RMS_Product__c/fields/BU__c.field-meta.xml
<CustomField>
    <fullName>BU__c</fullName>
    <description>bu_all_all_gl</description>
    <label>BU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FW</fullName>
            </value>
            <value>
                <fullName>APP/ACC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>