force-app/main/default/objects/RMS_Product__c/fields/BUCN__c.field-meta.xml
<CustomField>
    <fullName>BUCN__c</fullName>
    <description>bu_all_cn_rl</description>
    <label>BUCN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACC</fullName>
            </value>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>FTW-Core</fullName>
            </value>
            <value>
                <fullName>FTW-Seasonal</fullName>
            </value>
            <value>
                <fullName>NULL</fullName>
            </value>
            <value>
                <fullName>SS TEE</fullName>
            </value>
            <value>
                <fullName>WOVEN BOTTOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>