force-app/main/default/objects/RMS_Product__c/fields/Building_Block__c.field-meta.xml
<CustomField>
    <fullName>Building_Block__c</fullName>
    <description>building_block_all_all_rl</description>
    <label>Building Block</label>
    <length>40</length>
    <type>Text</type>
</CustomField>