force-app/main/default/objects/RMS_Product__c/fields/Building_Block_Mens__c.field-meta.xml
<CustomField>
    <fullName>Building_Block_Mens__c</fullName>
    <description>building_block_mens_all_all_rl</description>
    <label>Building Block Mens</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XL (North)</fullName>
            </value>
            <value>
                <fullName>XL (South)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>