force-app/main/default/objects/RMS_Product__c/fields/Building_Block_Womens__c.field-meta.xml
<CustomField>
    <fullName>Building_Block_Womens__c</fullName>
    <description>building_block_womens_all_all_rl</description>
    <label>Building Block Womens</label>
    <length>40</length>
    <type>Text</type>
</CustomField>