force-app/main/default/objects/RMS_Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>category_all_all_gl</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bags</fullName>
            </value>
            <value>
                <fullName>Bottoms</fullName>
            </value>
            <value>
                <fullName>Hats</fullName>
            </value>
            <value>
                <fullName>Small Accessories</fullName>
            </value>
            <value>
                <fullName>Socks</fullName>
            </value>
            <value>
                <fullName>Tops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>