force-app/main/default/objects/RMS_Product__c/fields/Category_Rl__c.field-meta.xml
<CustomField>
    <fullName>Category_Rl__c</fullName>
    <description>category_all_all_rl</description>
    <label>Category Rl</label>
    <length>40</length>
    <type>Text</type>
</CustomField>