force-app/main/default/objects/RMS_Product__c/fields/CFS_Rebuy__c.field-meta.xml
<CustomField>
    <fullName>CFS_Rebuy__c</fullName>
    <description>rebuy_cfs_all_cn_rl</description>
    <label>CFS Rebuy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rebuy</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>