force-app/main/default/objects/RMS_Product__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>class_all_all_gl</description>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>6 Panel</fullName>
            </value>
            <value>
                <fullName>Crew</fullName>
            </value>
            <value>
                <fullName>Full Zip</fullName>
            </value>
            <value>
                <fullName>Hooded</fullName>
            </value>
            <value>
                <fullName>Long</fullName>
            </value>
            <value>
                <fullName>Long Sleeve</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
            <value>
                <fullName>Short Sleeve</fullName>
            </value>
            <value>
                <fullName>Sleeveless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>