force-app/main/default/objects/RMS_Product__c/fields/Collaboration_Type__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Type__c</fullName>
    <description>collaboration_type_all_all_rl</description>
    <label>Collaboration Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>