force-app/main/default/objects/RMS_Product__c/fields/Color_Family__c.field-meta.xml
<CustomField>
    <fullName>Color_Family__c</fullName>
    <description>color_family_ft_all_gl</description>
    <label>Color Family</label>
    <length>40</length>
    <type>Text</type>
</CustomField>