force-app/main/default/objects/RMS_Product__c/fields/Colorway_ID__c.field-meta.xml
<CustomField>
    <fullName>Colorway_ID__c</fullName>
    <description>colorway_id_all_all_gl</description>
    <label>Colorway ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>