force-app/main/default/objects/RMS_Product__c/fields/Colorway_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>Colorway_Long_Name__c</fullName>
    <description>colorway_long_name_ft_all_gl</description>
    <label>Colorway Long Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>