force-app/main/default/objects/RMS_Product__c/fields/Colorway_Name__c.field-meta.xml
<CustomField>
    <fullName>Colorway_Name__c</fullName>
    <description>colorway_name_apac_all_gl</description>
    <label>Colorway Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>