force-app/main/default/objects/RMS_Product__c/fields/Colorway_Status__c.field-meta.xml
<CustomField>
    <fullName>Colorway_Status__c</fullName>
    <description>colorway_status_all_all_gl</description>
    <label>Colorway Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>