force-app/main/default/objects/RMS_Product__c/fields/Cushioning_Ftw__c.field-meta.xml
<CustomField>
    <fullName>Cushioning_Ftw__c</fullName>
    <description>cushioning_ftw_all_gl</description>
    <label>Cushioning Ftw</label>
    <length>80</length>
    <type>Text</type>
</CustomField>