force-app/main/default/objects/RMS_Product__c/fields/Cut_Ftw__c.field-meta.xml
<CustomField>
    <fullName>Cut_Ftw__c</fullName>
    <description>cut_ftw_all_gl</description>
    <label>Cut Ftw</label>
    <length>40</length>
    <type>Text</type>
</CustomField>