force-app/main/default/objects/RMS_Product__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>product_description_all_all_gl</description>
    <label>Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>