force-app/main/default/objects/RMS_Product__c/fields/Description_CN__c.field-meta.xml
<CustomField>
    <fullName>Description_CN__c</fullName>
    <description>product_description_all_cn_rl</description>
    <label>Description CN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>