force-app/main/default/objects/RMS_Product__c/fields/Design_Pack__c.field-meta.xml
<CustomField>
    <fullName>Design_Pack__c</fullName>
    <description>design_pack_all_all_gl</description>
    <label>Design Pack</label>
    <length>80</length>
    <type>Text</type>
</CustomField>