force-app/main/default/objects/RMS_Product__c/fields/Development_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Development_Schedule__c</fullName>
    <description>development_schedule_all_all_gl</description>
    <label>Development Schedule</label>
    <length>40</length>
    <type>Text</type>
</CustomField>