force-app/main/default/objects/RMS_Product__c/fields/DIG_Rebuy__c.field-meta.xml
<CustomField>
    <fullName>DIG_Rebuy__c</fullName>
    <description>rebuy_dig_all_cn_rl</description>
    <label>DIG Rebuy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rebuy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>