force-app/main/default/objects/RMS_Product__c/fields/Digital_Channel__c.field-meta.xml
<CustomField>
    <fullName>Digital_Channel__c</fullName>
    <description>digital_channel_all_all_rl</description>
    <label>Digital Channel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>