force-app/main/default/objects/RMS_Product__c/fields/Digital_Custom__c.field-meta.xml
<CustomField>
    <fullName>Digital_Custom__c</fullName>
    <description>digital_custom_all_cn_rl</description>
    <label>Digital Custom</label>
    <length>100</length>
    <type>Text</type>
</CustomField>