force-app/main/default/objects/RMS_Product__c/fields/Digital_Diversification__c.field-meta.xml
<CustomField>
    <fullName>Digital_Diversification__c</fullName>
    <description>digital_diversification_all_cn_rl</description>
    <label>Digital Diversification</label>
    <length>80</length>
    <type>Text</type>
</CustomField>