force-app/main/default/objects/RMS_Product__c/fields/Digital_Icon__c.field-meta.xml
<CustomField>
    <fullName>Digital_Icon__c</fullName>
    <description>digital_icon_all_all_gl</description>
    <label>Digital Icon</label>
    <length>40</length>
    <type>Text</type>
</CustomField>