force-app/main/default/objects/RMS_Product__c/fields/Digital_Omd__c.field-meta.xml
<CustomField>
    <fullName>Digital_Omd__c</fullName>
    <description>digital_omd_all_cn_rl</description>
    <label>Digital Omd</label>
    <type>Date</type>
</CustomField>