force-app/main/default/objects/RMS_Product__c/fields/Digital_Pyramid__c.field-meta.xml
<CustomField>
    <fullName>Digital_Pyramid__c</fullName>
    <description>digital_pyramid_all_cn_rl</description>
    <label>Digital Pyramid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CONCEPT MAP</fullName>
            </value>
            <value>
                <fullName>DTC EXCLUSIVE</fullName>
            </value>
            <value>
                <fullName>FW SNL</fullName>
            </value>
            <value>
                <fullName>INCUBATE</fullName>
            </value>
            <value>
                <fullName>SEASONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>