force-app/main/default/objects/RMS_Product__c/fields/Digital_Story__c.field-meta.xml
<CustomField>
    <fullName>Digital_Story__c</fullName>
    <description>digital_story_all_cn_rl</description>
    <label>Digital Story</label>
    <length>80</length>
    <type>Text</type>
</CustomField>