force-app/main/default/objects/RMS_Product__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>division_all_all_gl</description>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>FT</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Incubate</fullName>
            </value>
            <value>
                <fullName>Inline</fullName>
            </value>
            <value>
                <fullName>Regional Product Create</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>