force-app/main/default/objects/RMS_Product__c/fields/Door_Type__c.field-meta.xml
<CustomField>
    <fullName>Door_Type__c</fullName>
    <description>door_type_all_all_rl</description>
    <label>Door Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>