force-app/main/default/objects/RMS_Product__c/fields/Drop__c.field-meta.xml
<CustomField>
    <fullName>Drop__c</fullName>
    <description>drop_all_all_rl</description>
    <label>Drop</label>
    <length>40</length>
    <type>Text</type>
</CustomField>