force-app/main/default/objects/RMS_Product__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <description>factory_all_all_gl</description>
    <label>Factory</label>
    <length>80</length>
    <type>Text</type>
</CustomField>