force-app/main/default/objects/RMS_Product__c/fields/Family_Name__c.field-meta.xml
<CustomField>
    <fullName>Family_Name__c</fullName>
    <description>family_name_all_all_gl</description>
    <label>Family Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>