force-app/main/default/objects/RMS_Product__c/fields/Flow__c.field-meta.xml
<CustomField>
    <fullName>Flow__c</fullName>
    <description>flow_all_all_gl</description>
    <label>Flow</label>
    <length>40</length>
    <type>Text</type>
</CustomField>