force-app/main/default/objects/RMS_Product__c/fields/FOB_CNY__c.field-meta.xml
<CustomField>
    <fullName>FOB_CNY__c</fullName>
    <label>FOB(CNY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>