force-app/main/default/objects/RMS_Product__c/fields/Gender_Class__c.field-meta.xml
<CustomField>
    <fullName>Gender_Class__c</fullName>
    <description>gender_class_all_all_gl</description>
    <label>Gender Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crib</fullName>
            </value>
            <value>
                <fullName>Infant</fullName>
            </value>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Kid</fullName>
            </value>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Unisex</fullName>
            </value>
            <value>
                <fullName>Women</fullName>
            </value>
            <value>
                <fullName>Youth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>