force-app/main/default/objects/RMS_Product__c/fields/Gender_Group__c.field-meta.xml
<CustomField>
    <fullName>Gender_Group__c</fullName>
    <description>gender_group_all_all_gl</description>
    <label>Gender Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Unisex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>