force-app/main/default/objects/RMS_Product__c/fields/Gender_Group_Rl__c.field-meta.xml
<CustomField>
    <fullName>Gender_Group_Rl__c</fullName>
    <description>gender_group_all_all_rl</description>
    <label>Gender Group Rl</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FEMALE</fullName>
            </value>
            <value>
                <fullName>JUNIOR</fullName>
            </value>
            <value>
                <fullName>MALE</fullName>
            </value>
            <value>
                <fullName>MEN</fullName>
            </value>
            <value>
                <fullName>UNISEX</fullName>
            </value>
            <value>
                <fullName>WOMEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>