force-app/main/default/objects/RMS_Product__c/fields/Graphic_Story_Apac__c.field-meta.xml
<CustomField>
    <fullName>Graphic_Story_Apac__c</fullName>
    <description>graphic_story_apac_all_gl</description>
    <label>Graphic Story Apac</label>
    <length>40</length>
    <type>Text</type>
</CustomField>