force-app/main/default/objects/RMS_Product__c/fields/Hard_Launch__c.field-meta.xml
<CustomField>
    <fullName>Hard_Launch__c</fullName>
    <description>hard_launch_all_all_rl</description>
    <label>Hard Launch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>