force-app/main/default/objects/RMS_Product__c/fields/Incubate_Type__c.field-meta.xml
<CustomField>
    <fullName>Incubate_Type__c</fullName>
    <description>incubate_type_all_all_rl</description>
    <label>Incubate Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>