force-app/main/default/objects/RMS_Product__c/fields/IsReturnEnable__c.field-meta.xml
<CustomField>
    <fullName>IsReturnEnable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True: 可退货   False: 不可退货</description>
    <inlineHelpText>是否可退货</inlineHelpText>
    <label>IsReturnEnable</label>
    <type>Checkbox</type>
</CustomField>