force-app/main/default/objects/RMS_Product__c/fields/KL__c.field-meta.xml
<CustomField>
    <fullName>KL__c</fullName>
    <description>kl_all_all_rl</description>
    <label>KL</label>
    <length>40</length>
    <type>Text</type>
</CustomField>