force-app/main/default/objects/RMS_Product__c/fields/KR_Rebuy__c.field-meta.xml
<CustomField>
    <fullName>KR_Rebuy__c</fullName>
    <description>rebuy_all_kr_rl</description>
    <label>KR Rebuy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rebuy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>