force-app/main/default/objects/RMS_Product__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>launch_date_all_all_rl</description>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>