force-app/main/default/objects/RMS_Product__c/fields/Lining_Category__c.field-meta.xml
<CustomField>
    <fullName>Lining_Category__c</fullName>
    <description>lining_category_ft_all_gl</description>
    <label>Lining Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>