force-app/main/default/objects/RMS_Product__c/fields/Material_Category__c.field-meta.xml
<CustomField>
    <fullName>Material_Category__c</fullName>
    <description>material_category_all_all_gl</description>
    <label>Material Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>