force-app/main/default/objects/RMS_Product__c/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <description>material_code_all_cn_rl</description>
    <label>Material Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>