force-app/main/default/objects/RMS_Product__c/fields/Material_Conversion_Id__c.field-meta.xml
<CustomField>
    <fullName>Material_Conversion_Id__c</fullName>
    <description>material_conversion_id_all_all_gl</description>
    <label>Material Conversion Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>