force-app/main/default/objects/RMS_Product__c/fields/MCA__c.field-meta.xml
<CustomField>
    <fullName>MCA__c</fullName>
    <description>mca_all_all_rl</description>
    <label>MCA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>