force-app/main/default/objects/RMS_Product__c/fields/MF_Flag__c.field-meta.xml
<CustomField>
    <fullName>MF_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>mf_flag_all_all_rl</description>
    <label>MF Flag</label>
    <type>Checkbox</type>
</CustomField>