force-app/main/default/objects/RMS_Product__c/fields/Model_Description__c.field-meta.xml
<CustomField>
    <fullName>Model_Description__c</fullName>
    <description>model_description_all_all_gl</description>
    <label>Model Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>