force-app/main/default/objects/RMS_Product__c/fields/MSRP__c.field-meta.xml
<CustomField>
    <fullName>MSRP__c</fullName>
    <description>Manufacturer Suggested Retail Price
msrp_all_cn_rl</description>
    <inlineHelpText>Manufacturer Suggested Retail Price</inlineHelpText>
    <label>MSRP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>