force-app/main/default/objects/RMS_Product__c/fields/MSRP_Range__c.field-meta.xml
<CustomField>
    <fullName>MSRP_Range__c</fullName>
    <description>msrp_range_all_cn_rl</description>
    <label>MSRP Range</label>
    <length>40</length>
    <type>Text</type>
</CustomField>