force-app/main/default/objects/RMS_Product__c/fields/MSRPHK__c.field-meta.xml
<CustomField>
    <fullName>MSRPHK__c</fullName>
    <description>msrp_all_hk_rl</description>
    <label>MSRPHK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>