force-app/main/default/objects/RMS_Product__c/fields/MSRPKR__c.field-meta.xml
<CustomField>
    <fullName>MSRPKR__c</fullName>
    <description>msrp_all_kr_rl</description>
    <label>MSRPKR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>