force-app/main/default/objects/RMS_Product__c/fields/MSRPTW__c.field-meta.xml
<CustomField>
    <fullName>MSRPTW__c</fullName>
    <description>msrp_all_tw_rl</description>
    <label>MSRPTW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>