force-app/main/default/objects/RMS_Product__c/fields/New_Carryover__c.field-meta.xml
<CustomField>
    <fullName>New_Carryover__c</fullName>
    <description>new_carryover_all_all_gl</description>
    <label>New / Carryover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Carryover</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>