force-app/main/default/objects/RMS_Product__c/fields/Nrf_Color_Code__c.field-meta.xml
<CustomField>
    <fullName>Nrf_Color_Code__c</fullName>
    <description>nrf_color_code_ft_all_gl</description>
    <label>Nrf Color Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>