force-app/main/default/objects/RMS_Product__c/fields/Planning_Special__c.field-meta.xml
<CustomField>
    <fullName>Planning_Special__c</fullName>
    <description>planning_special_all_cn_rl</description>
    <label>Planning Special</label>
    <length>40</length>
    <type>Text</type>
</CustomField>