force-app/main/default/objects/RMS_Product__c/fields/Product_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Product_Bucket__c</fullName>
    <description>product_bucket_all_all_gl</description>
    <label>Product Bucket</label>
    <length>40</length>
    <type>Text</type>
</CustomField>