force-app/main/default/objects/RMS_Product__c/fields/Product_Channel__c.field-meta.xml
<CustomField>
    <fullName>Product_Channel__c</fullName>
    <description>product_channel_all_all_rl</description>
    <label>Product Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADULTS</fullName>
            </value>
            <value>
                <fullName>KIDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>