force-app/main/default/objects/RMS_Product__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>product_line_all_all_gl</description>
    <label>Product Line</label>
    <length>40</length>
    <type>Text</type>
</CustomField>