force-app/main/default/objects/RMS_Product__c/fields/Product_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Number__c</fullName>
    <description>product_number_all_all_gl</description>
    <label>Product Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>